--- a/2012.02113/book.tex
+++ b/2012.02113/book.tex
@@ -7,43 +7,60 @@
 
 \usepackage{background}
 \backgroundsetup{
-contents={\parbox{1.6\textwidth}{%
-{\small\centering
-This material will be published by Cambridge University Press as
-\emph{Entropy and Diversity: The Axiomatic Approach} by Tom Leinster.\\
-This version is free to view and download for personal use only. 
-Not for re-distribution, re-sale or use in derivative works.\\ 
-\copyright\ Tom Leinster 2020
-% \href{https...}{link text}
-\\ \ 
-}}},
+contents={},
 color=black,
 opacity=1,
 placement=bottom,
 scale=1
 }
+\usepackage[noBBpl,sc]{mathpazo}
+%\usepackage{eulervm}
+\linespread{1.05}
+\usepackage[papersize={5.9in, 9.0in}, left=.5in, right=.5in, top=.8in, bottom=.8in]{geometry}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true,breaklinks]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% 
-% COLOUR/B&W TOGGLE
-% 
+\makeatletter
+\AJW@headwidth \textwidth
+\addtolength{\AJW@headwidth}{-\AJW@indent}
 
-% FOR COLOUR VERSION:
+\parskip 0pt
+\raggedbottom
 
-\definecolor{myurlcolor}{rgb}{0.1,0.1,0.8}
-\definecolor{mylinkcolor}{rgb}{0.05,0.05,0.4}
-\usepackage{hyperref}
-\hypersetup{colorlinks,
-linkcolor=mylinkcolor,
-citecolor=mylinkcolor,
-urlcolor=mylinkcolor}
+\usepackage{titlesec}
+\titleformat{\section}[block]
+  {\fillast}
+  {\bfseries{\thesection }}
+  {1ex minus .1ex}
+  {\large\bfseries}
+  
+\titleformat{\subsection}[block]
+  {\fillast}
+  {{\it \thesection }}
+  {1ex minus .1ex}
+  {\it}
 
-% FOR B&W VERSION:
+\titlespacing*{\section}
+{0pt}{18pt}{7pt}
+\titlespacing*{\subsection}
+{0pt}{18pt}{7pt}
 
-% \newcommand{\href}[2]{#2} % for href-less BW version only
- 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\titleformat*{\subsubsection}{\large\scshape}
 
+
+\input{../helpers/cmrsum}
+%\input{../helpers/fix-underbrace}
 
 \usepackage{makeidx}
 \makeindex
