--- a/2012.02113/dependency.tex
+++ b/2012.02113/dependency.tex
@@ -3,8 +3,7 @@
 A dotted line indicates that one chapter is helpful, but not essential, for
 another. 
 
-\vspace*{10mm}
-
+\vskip-1in
 \begin{center}
 \includegraphics[width=1\textwidth]{dependency5}%
 \end{center}
