--- a/2012.02113/intro.tex
+++ b/2012.02113/intro.tex
@@ -820,7 +820,8 @@ strictly analogous characterization of information loss mod~$p$.  In short,
 the apparatus developed for the real field can be successfully applied to
 the field of integers modulo a prime.
 
-\introbreak\pagebreak
+\newpage
+\introbreak
 
 Finally, this book aims to challenge outdated conceptions of what
 applied%
