--- a/2012.02113/prob.tex
+++ b/2012.02113/prob.tex
@@ -955,20 +955,20 @@ generating function $m_X$ itself.
 Specifically, equation~\eqref{eq:cram-log} and the Legendre--Fenchel
 theorem imply that for all $\lambda \in \R$,
 % 
-\begin{multline*}
+\begin{align*}
 \log m_X(\lambda)       
-= \\
-\max \Biggl\{
-\sup_{x \geq \Ex(X)} \Bigl(
+& = 
+\max \Bigl\{
+\sup_{x \geq \Ex(X)} \bigl(
 \lambda x + \lim_{r \to \infty} \tfrac{1}{r} \log 
 \Pr\bigl(\ovln{X}_r \geq x\bigr)
-\Bigr), 
-\sup_{x \leq \Ex(X)} \Bigl(
+\bigr),\\
+& \qquad\qquad\!\sup_{x \leq \Ex(X)} \bigl(
 \lambda x + \lim_{r \to \infty} \tfrac{1}{r} \log 
 \Pr\bigl(\ovln{X}_r \leq x\bigr)
-\Bigr)
-\Biggr\},
-\end{multline*}
+\bigr)
+\Bigr\},
+\end{align*}
 % 
 or equivalently,
 % 
