--- a/2012.02113/thmlist.tex
+++ b/2012.02113/thmlist.tex
@@ -1,5 +1,7 @@
 \usepackage[amsmath,thmmarks]{ntheorem}
 
+\theoremheaderfont{\sc}
+
 \newtheorem{thm}{Theorem}[section]
 \newtheorem{propn}[thm]{Proposition}
 \newtheorem{lemma}[thm]{Lemma}
