--- a/2012.02113/ffe.tex
+++ b/2012.02113/ffe.tex
@@ -59,7 +59,7 @@ A more sophisticated example is the functional equation
 \]
 % \end{equation}
 % 
-($s \in \C$) satisfied by the Riemann%
+($s \in \Comp$) satisfied by the Riemann%
 %
 \index{Riemann, Bernhard!zeta function} 
 % 
