--- a/2012.02113/book-charter.tex
+++ b/2012.02113/book-charter.tex
@@ -64,6 +64,7 @@ bookmarksopenlevel=10
 \titleformat*{\subsubsection}{\large\scshape}
 
 
+%\input{../helpers/cmrsum}
 %\input{../helpers/fix-underbrace}
 
 \usepackage{makeidx}
