--- a/2011.12671/2011.12671-psu.tex
+++ b/2011.12671/2011.12671-psu.tex
@@ -462,7 +462,7 @@ However, if Dr.\ Diehard admits one more thing, we can trap him. I will now expl
       \draw[->](0,-\st)--(0,\st) node[above]{$t$ (yrs.)};
       \draw [fill=black, thick] (0,0) circle[radius=.05] node[below left]{A};
       \draw [fill=black, thick] (1.7,.3) circle[radius=.05] node[above right]{B};
-      \draw [fill=black, thick] (1.7,-.3) circle[radius=.05] node[below right]{B'};
+      \draw [fill=black, thick] (1.7,-.3) circle[radius=.05] node[below right]{$\textrm{B}'$};
     \end{scope}
     \end{tikzpicture}
   \end{center}
@@ -477,15 +477,15 @@ We have now a contradiction with the predictions of quantum mechanics for simple
 
 Here we have a drawing of space-time. It's really four dimensional, but due to budgetary constraints I've had to represent it as a two-dimensional object. The scale has been chosen so that time $t$ is measured in years and $x$ in light-years, therefore the paths of light rays are 45-degree lines.
 
-Now let's consider two measurements on possibly two different systems done in two regions A and B---forget B' for the moment, its role will emerge later. Thus these black dots represent actually substantial regions in space time, during which an experiment has been conducted.
+Now let's consider two measurements on possibly two different systems done in two regions A and B---forget $\textrm{B}'$ for the moment, its role will emerge later. Thus these black dots represent actually substantial regions in space time, during which an experiment has been conducted.
 
 Now one thing Dr.\ Diehard will have to admit is that although the results of an experiment in A may interfere with an experiment in B, the results of an experiment in B can hardly interfere with the results of an experiment in A unless information can travel backwards in time, which we will assume he does not accept. That's because A is over and done with and its results recorded in the log book before B occurs.
 
-On the other hand, if we imagine another Lorentz observer with another coordinate system, B will appear as B' here. B and B', as you can see by eyeball, are on the same space-like hyperbola---there is a Lorentz transformation that leaves A at the origin of coordinates unchanged and turns B into B'. B and B' are space-like separated from A. A light signal cannot get from A to B, and nothing traveling slower than the speed of light can get from A to B.
+On the other hand, if we imagine another Lorentz observer with another coordinate system, B will appear as $\textrm{B}'$ here. B and $\textrm{B}'$, as you can see by eyeball, are on the same space-like hyperbola---there is a Lorentz transformation that leaves A at the origin of coordinates unchanged and turns B into $\textrm{B}'$. B and $\textrm{B}'$ are space-like separated from A. A light signal cannot get from A to B, and nothing traveling slower than the speed of light can get from A to B.
 
-Now that second Lorentz observer would give the same argument I gave, except he would interchange the roles of A and B'. He would say the results of an experiment at A cannot interfere with the act of doing an experiment at B' because B' is earlier than A. But B' is B, just B seen by a different observer.
+Now that second Lorentz observer would give the same argument I gave, except he would interchange the roles of A and $\textrm{B}'$. He would say the results of an experiment at A cannot interfere with the act of doing an experiment at $\textrm{B}'$ because $\textrm{B}'$ is earlier than A. But $\textrm{B}'$ is B, just B seen by a different observer.
 
-Therefore, if you believe in the principal of Lorentz invariance, and if you believe you cannot send information backwards in time, you have to conclude that experiments done at space-like separated locations sufficiently far apart from each other cannot interfere with each other. It can't matter what order you ask the questions if this question is being asked of an earthman and this one of an inhabitant of the Andromeda Nebula, and they're both being asked today.
+Therefore, if you believe in the principal of Lorentz invariance, and if you believe you cannot send information backwards in time, you have to conclude that experiments done at space-like separated locations sufficiently far apart from each other cannot interfere with each other. It can't matter what order you ask the questions if this question is being asked of an earth man and this one of an inhabitant of the Andromeda Nebula, and they're both being asked today.
 
 Are there any questions about this? This is the groundwork from which the rest will proceed.
 \begin{figure}[htb] 
@@ -505,7 +505,7 @@ Are there any questions about this? This is the groundwork from which the rest w
     \end{tikzpicture}
   \end{center}
   \begin{center}
-    {Fig.~1: The Diehard Proposal (1'' = 1 light minute)}
+    {Fig.~1: The Diehard Proposal (1 inch = 1 light minute)}
   \end{center}
 %  \begin{raggedright}
 %  \end{raggedright}
