--- a/2011.12671/2011.12671-psu.tex
+++ b/2011.12671/2011.12671-psu.tex
@@ -18,7 +18,7 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[papersize={7.0in, 9in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.7in, 9in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \linespread{1.05}
 
 \sloppy
@@ -635,11 +635,11 @@ It's not blood samples we're sending to them after all, it's three spin one-half
 $A$ is simply $\sigma_x$ for the particle that arrives at the appropriate station, and $B$ is $\sigma_y$.
 
 Let's first check that $A_1B_2B_3$ acting on this state is $+1$.
-By the third statement about quantum mechanics I put on the board in my preliminary section [see Slide 4], this quantity is definitely always going to be measured to be $+1$. Well, we have $\sigma_x(1)\sigma_y(2)\sigma_y(3)$ by my transcription table. $\sigma_x$ turns up into down. $\sigma_y$ turns up into down with a factor of $\i$ or maybe $-\i$, I can never remember,
+By the third statement about quantum mechanics I put on the board in my preliminary section [see Slide 4], this quantity is definitely always going to be measured to be $+1$. Well, we have $\sigma_x(1)\sigma_y(2)\sigma_y(3)$ by my transcription table. $\sigma_x$ turns up into down. $\sigma_y$ turns up into down with a factor of $i$ or maybe $-i$, I can never remember,
 %but you have two of them so that it doesn't matter.
 but that's no problem here because you have two of them so the square is always $-1$.  Acting on the first component of this state this operator produces the second component including the minus sign while acting on the second component this operator produces the first. So this state is indeed an eigenstate of this operator with eigenvalue $+1$. And, of course, since everything is permutation invariant, the same is true for the other two operators.
 
-But $A_1A_2A_3$ is $\sigma_x(1)\sigma_x(2)\sigma_x(3)$, and $\sigma_x$'s turns and up into a down without a minus sign. Therefore this state is also an eigenstate of $A_1A_2A_3$, but with eigenvalue $-1$.
+But $A_1A_2A_3$ is $\sigma_x(1)\sigma_x(2)\sigma_x(3)$, and $\sigma_x$'s turns an up into a down without a minus sign. Therefore this state is also an eigenstate of $A_1A_2A_3$, but with eigenvalue~$-1$.
 
 The Diehards using only these proto-classical ideas---they aren't even so well developed to be called classical physics, they're sort of the underpinnings of classical reasoning---deduce that they will always get $A_1A_2A_3=+1$, sometimes a $+1$ and two $-1$'s, but always $+1$. In fact, if quantum mechanics is right, they will always get $-1$.
 
@@ -1223,7 +1223,7 @@ was supported by the Deutsche Forschungsgemeinschaft (DFG, German Research Found
 
 \bibitem{everett57rmp454}
 \bibinfo{author}{Everett, H.}
-\newblock \bibinfo{title}{"relative state" formulation of quantum mechanics}.
+\newblock \bibinfo{title}{``Relative state'' formulation of quantum mechanics}.
 \newblock \emph{\bibinfo{journal}{Rev. Mod. Phys.}}
   \textbf{\bibinfo{volume}{29}}, \bibinfo{pages}{454--462}
   (\bibinfo{year}{1957}).
@@ -1266,7 +1266,7 @@ was supported by the Deutsche Forschungsgemeinschaft (DFG, German Research Found
 
 \bibitem{mott29prsla79}
 \bibinfo{author}{Mott, N.~F.}
-\newblock \bibinfo{title}{The wave mechanics of $\alpha$-{R}ay tracks”}.
+\newblock \bibinfo{title}{The wave mechanics of $\alpha$-{R}ay tracks}.
 \newblock \emph{\bibinfo{journal}{Proc. R. Soc. Lond. A}}
   \textbf{\bibinfo{volume}{126}}, \bibinfo{pages}{79--84}
   (\bibinfo{year}{1929}).
