--- a/2006.14175/2006.14175.tex
+++ b/2006.14175/2006.14175.tex
@@ -1,6 +1,5 @@
-\documentclass[11pt,twoside,A4]{article}
+\documentclass[12pt]{article}
 %\documentclass[landscape,twocolumn,A4]{article}
-\usepackage{times,fancyhdr}
 \usepackage[dvips]{graphicx}
 \usepackage{latexsym}
 \usepackage[affil-it]{authblk}
@@ -11,16 +10,51 @@
 \usepackage{floatrow}
 \usepackage{units}
 \usepackage{setspace}
-\usepackage{hyperref}
 \usepackage[font=small,labelfont=bf]{caption}
 %\usepackage{fullpage}
 %\textwidth 14cm
-\usepackage[top=4cm, bottom=4cm, left=3.5cm, right=3.5cm]{geometry}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
-\pagestyle{fancy}
-\fancyhead[RO,RE]{Born's Rule}
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\fancyhead[RO,RE]{Born's Rule}
 %\fancyhead[CO,CE]{Notes \today}
-\fancyhead[LO,LE]{{\sl Hossenfelder}}
+%\fancyhead[LO,LE]{{\sl Hossenfelder}}
 %\fancyfoot[RO, LE] {\thepage}
 
 \def\beq{\begin{equation}}
