--- a/2006.14175/2006.14175.tex
+++ b/2006.14175/2006.14175.tex
@@ -31,7 +31,7 @@ bookmarksopenlevel=10
 \usepackage[noBBpl,sc]{mathpazo}
 \usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \linespread{1.05}
-\sloppy
+%\sloppy
 \raggedbottom
 \pagestyle{plain}
 
@@ -124,7 +124,7 @@ The physical motivation for these assumptions is that $P_N$ should allow us to c
 \bigskip
 
 {\bf Proof}: Since $P_N$ is invariant under unitary operations, transition probabilities can only be functions of scalar products, ie 
-$P_N(|\Psi \rangle \to |\Phi \rangle)  = P_N(\langle \Psi |\Phi \rangle) ~ \forall ~ |\Psi \rangle, |\Phi \rangle$. This means that $P_N$ is actually a map from the complex unit sphere of dimension 1 to the interval $[ 0,1] \in {\mathbb{R}}$. It follows from (\ref{orth}) that $P(\langle \Psi | \Phi \rangle) = 0$ whenever $\langle \Psi | \Phi \rangle =0$, because if $|\Psi \rangle$ and $|\Phi \rangle$ are orthogonal, one could construct a basis of which they are elements. This means $P(0) = 0$. That $P_N$ is independent of $N$ then just means that this function is the same for all $N$, so we will from now on omit the index $N$. 
+$P_N(|\Psi \rangle \to |\Phi \rangle)  = P_N(\langle \Psi |\Phi \rangle)$ for all $|\Psi \rangle, |\Phi \rangle$. This means that $P_N$ is actually a map from the complex unit sphere of dimension 1 to the interval $[ 0,1] \in {\mathbb{R}}$. It follows from (\ref{orth}) that $P(\langle \Psi | \Phi \rangle) = 0$ whenever $\langle \Psi | \Phi \rangle =0$, because if $|\Psi \rangle$ and $|\Phi \rangle$ are orthogonal, one could construct a basis of which they are elements. This means $P(0) = 0$. That $P_N$ is independent of $N$ then just means that this function is the same for all $N$, so we will from now on omit the index $N$. 
 
 Let $|\Psi^i \rangle$, $i \in \{1... N \}$ be an arbitrary orthonormal basis and
 \beqn
