--- a/2006.14175/2006.14175.tex
+++ b/2006.14175/2006.14175.tex
@@ -96,10 +96,10 @@ the physical properties of the theory.
 Since the early days of quantum mechanics, there have thus been many attempts to derive 
 Born's rule from other assumptions: non-contextuality \cite{Gleason}, decision theory \cite{Deutsch}, non-triviality \cite{Aaronson}, and the number of degrees of freedom in composite systems \cite{Hardy,Masanes:2010tt,Brukner}. The argument discussed here is most similar to the ones for many worlds presented in \cite{Vaidman, Carroll:2014mea} and the one using environment-assisted invariance \cite{Zurek}. 
 
-However, as will become clear shortly, it is unnecessary to refer to many worlds or environment-assisted invariance (“envariance”) in particular to argue that Born’s rule is the only consistent way to put a probability distribution on a theory like quantum mechanics. For the here presented argument, one does not need to refer to the observer’s knowledge (or absence thereof) or consider the coupling of a system to its environment (as one does for envariance) or to the branching of the wave-function.
+However, as will become clear shortly, it is unnecessary to refer to many worlds or environment-assisted invariance (“envariance”) in particular to argue that Born’s rule is the only consistent way to put a probability distribution on a theory like quantum mechanics. For the argument presented here, one does not need to refer to the observer’s knowledge (or absence thereof) or consider the coupling of a system to its environment (as one does for envariance) or to the branching of the wave-function.
 
-The derivation presented here is particularly relevant for hidden variables ap- proaches that violate the assumptions of Gleason’s theorem \cite{Gleason}, such as superde- terminism. Such approaches have been criticized for requiring finetuning to arrive at Born’s rule \cite{wood, sen1, sen2}. A similar criticism has been leveled at Bohmian Mechanics \cite{colin}. Symmetry requirements are a well-trodden path to explaining why certain features of a theory appear to be finetuned, but are not, which is why we hope the proof provided below may be useful to the end of settling the finetuning debate.
-It must be empasized, though, that the purpose of the argument put forward here is merely to elucidate how much it takes to get Born’s rule if one already knows one is dealing with a probability distribution in a theory that is unitarily invariant. That is, we here do not aim to derive quantum mechanics, but focus on the much more tractable problem: If one has a unitary theory which gives rise to well-defined probabilities, then what else does one need to make sure the theory reproduces quantum mechanics. The answer, as we will see in the following is: not much.
+The derivation presented here is particularly relevant for hidden variables approaches that violate the assumptions of Gleason’s theorem \cite{Gleason}, such as superdeterminism. Such approaches have been criticized for requiring fine tuning to arrive at Born’s rule \cite{wood, sen1, sen2}. A similar criticism has been leveled at Bohmian Mechanics \cite{colin}. Symmetry requirements are a well-trodden path to explaining why certain features of a theory appear to be fine tuned, but are not, which is why we hope the proof provided below may be useful to the end of settling the fine tuning debate.
+It must be emphasized, though, that the purpose of the argument put forward here is merely to elucidate how much it takes to get Born’s rule if one already knows one is dealing with a probability distribution in a theory that is unitarily invariant. That is, we here do not aim to derive quantum mechanics, but focus on the much more tractable problem: If one has a unitary theory which gives rise to well-defined probabilities, then what else does one need to make sure the theory reproduces quantum mechanics. The answer, as we will see in the following is: not much.
 
 \section{Argument}
 
@@ -111,7 +111,7 @@ To get started, let $|\Psi \rangle$ and $|\Phi \rangle$ be elements of a vector 
 
 \noindent By $P_N$ being a well-defined probability distribution we mean
 \beqn
-P_N(|\Psi\rangle \to |\Phi\rangle) \in \mathbb{R} ~\wedge~ 0 \leq P_N(|\Psi\rangle \to |\Phi\rangle) \leq 1 ~~\forall~ |\Psi \rangle, |\Phi \rangle ~. \label{welldef}
+P_N(|\Psi\rangle \to |\Phi\rangle) \in \mathbb{R} ~\mbox{and}~ 0 \leq P_N(|\Psi\rangle \to |\Phi\rangle) \leq 1 ~~\forall~ |\Psi \rangle, |\Phi \rangle ~. \label{welldef}
 \eeqn
 By $P_N$ being consistent, we mean
 \beqn
