--- a/hep-th-0212049/renorm_group_2.tex
+++ b/hep-th-0212049/renorm_group_2.tex
@@ -1,7 +1,7 @@
 %\documentclass[showpacs,preprintnumbers,amsmath,amssymb]{revtex4}
 %\documentclass[floatfix,twocolumn,preprintnumbers,amsmath,amssymb,prb]{revtex4}
 %\documentclass[aps,prb,preprint,preprintnumbers,amssymb]{revtex4}
-\documentclass[floatfix,twocolumn,preprintnumbers,amsmath,amssymb,prb]{revtex4}
+\documentclass[floatfix,preprintnumbers,amsmath,amssymb,prb,12pt]{revtex4-1}
 %\usepackage{graphicx}
 %\usepackage{dcolumn}
 \usepackage{amsmath}
@@ -16,7 +16,45 @@
 \newcommand{\be}{\begin{equation}}
 \newcommand{\ee}{\end{equation}} 
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
+% these include amsmath and that can cause trouble in older docs.
+%\input{../helpers/minion_sum}
+\input{../helpers/fix-underbrace.tex}
+
+%\usepackage[small]{titlesec}
+%\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \usepackage{enumerate}
 
