--- a/1910.06890/sahasrabudhe2020.tex
+++ b/1910.06890/sahasrabudhe2020.tex
@@ -11,7 +11,25 @@
 %%    and check that authors proprely filled in field marked with "AUTHOR"
 
 \documentclass{daj}
-
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 \usepackage{amsmath}
 \usepackage{amsthm, amssymb, amsfonts}
 
