--- a/2006.10834/BHslices2.tex
+++ b/2006.10834/BHslices2.tex
@@ -1,4 +1,6 @@
-\input harvmac
+\input ../helpers/harvmac-psu
+\input ../helpers/fix-harvmac
+
 \let\protected\relax
 \input graphicx
 \input color
@@ -237,7 +239,7 @@ doi:10.1088/0264-9381/16/8/306
 Class. Quant. Grav. {\bf 28}, 172001 (2011)
 doi:10.1088/0264-9381/28/17/172001
 [arXiv:1106.5000 [gr-qc]];
-J.~Cortez, L.~Fonseca, D.~Martín-de Blas and G.~A.~Mena Marugán,
+J.~Cortez, L.~Fonseca, D.~Martï¿½n-de Blas and G.~A.~Mena Marugï¿½n,
 ``Uniqueness of the Fock quantization of scalar fields under mode preserving canonical transformations varying in time,''
 Phys. Rev. D {\bf 87}, no.4, 044013 (2013)
 doi:10.1103/PhysRevD.87.044013
