--- a/2006.10834/BHslices2.tex
+++ b/2006.10834/BHslices2.tex
@@ -1,6 +1,7 @@
 \input ../helpers/harvmac-psu
 \input ../helpers/fix-harvmac
 \tolerance=10000
+\baselineskip=15.5 truept
 
 \let\protected\relax
 \input graphicx
